# conversion-rate-prediction

./: .gitignore  README.md  pyproject.toml
PaddleDynamic/: cal_auc.py  config.py  infer.py  merge.py  output.py  pipeline.sh  post_process.sh  test.sh  trainer.py
PaddleDynamic/jupyter/: feature_eng.ipynb  idx_map1.pkl  idx_map2.pkl  idx_map3.pkl  paddle_exp.ipynb  records_df.csv
PaddleDynamic/models/: activation.py  afm.py  autoint.py  dcnv10.py  dcnv11.py  dcnv12.py  dcnv13.py  dcnv14.py  dcnv2.py  dcnv3.py  dcnv3_helper.py  dcnv4.py  dcnv5.py  dcnv6.py  dcnv7.py  dcnv8.py  dcnv9.py  deepandcross.py  deepcrossing.py  deepcrossingV2.py  deepcrossingattn.py  deepfm.py  dlrm.py  dnn.py  fibinet.py  fnn.py  mmoe.py  multi_task_model.py  naive_attention.py  nfm.py  pnn.py  rec_model.py  share_bottom.py  single_task_model.py  wideanddeep.py
PaddleDynamic/utils/: mmoe_dataset.py  normal_dataset.py  rec_dataset.py  save_and_load.py  utils_single.py
PaddleRec-master/tools/: static_infer.py  static_trainer.py
PaddleRecSys/: config.py  output.py  paddle_static_infer.py  paddle_static_train.py  test.sh  train.sh
PaddleRecSys/jupyter/: paddle_exp.ipynb
PaddleRecSys/models/: deepandcross.py  deepcrossing.py  deepfm.py  dnn.py  fnn.py  multi_task_model.py  nfm.py  pnn.py  single_task_model.py  wideanddeep.py
PaddleRecSys/readers/: single_task_reader.py
PaddleStatic/: config.py  paddle_static_infer.py  paddle_static_train.py  post_process.sh  train.sh
TorchRecSys/: file_reader.py  torch_exp.ipynb  torch_exp.py
torchrec/: explore.ipynb  file_reader.py  run_trials.py
(+23 files in other folders)
