[tool.poetry]
name = "baidu-rec"
version = "0.1.0"
description = ""
authors = ["rongzhimai"]
readme = "README.md"
packages = [{include = "baidu_rec"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
joblib = "1.2.0"
numpy = "1.24.2"
pandas = "1.5.3"
seaborn = "0.12.2"
statsmodels = "0.13.5"
scikit-learn = "1.2.2"
scipy = "1.8.1"
jupyterlab = "3.6.1"
tensorboard = "2.12.0"
lightgbm = "3.3.5"
matplotlib = "3.7.1"
pip = "23.0.1"
pyclean = "2.7.0"
ipykernel = "6.22.0"
ipympl = "0.9.3"
ipywidgets = "8.0.6"
black = "23.3.0"
isort = "5.12.0"
xlrd = "2.0.1"
openpyxl = "3.1.2"
tqdm = "4.65.0"
jupyterlab-latex = "3.1.0"
jupyterlab-pygments = "0.2.2"
jupyterlab-code-formatter = "1.5.3"
jupyterlab-execute-time = "2.3.1"
jupyterlab-system-monitor = "0.8.0"
jupyterlab-git = "0.41.0"
nodejs = "0.1.1"
torch = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
